updated css to fix content-pane on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
+    top: 0;
+    bottom: 0;
 }
 
 
